<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Tari Aurora</string>
    <string name="wallet_service_desc">This service is required to communicate with Tari services. Please keep this service running if you want to be able to communicate with the Tari system.</string>
    <string name="ttl_store_url" translatable="false">https://store.tarilabs.com</string>
    <string name="tari_url" translatable="false">https://tari.com</string>
    <string name="github_repo_url" translatable="false">https://github.com/tari-project/wallet-android</string>
    <string name="user_agreement_url" translatable="false">https://www.tari.com/user_agreement/</string>
    <string name="privacy_policy_url" translatable="false">https://www.tari.com/privacy_policy/</string>
    <string name="disclaimer_url" translatable="false">https://www.tari.com/disclaimer/</string>
    <string name="explorer_kernel_url" translatable="false">%s/kernel_search?nonces=%s&amp;signatures=%s</string>
    <string name="tor_bridges_url" translatable="false">https://bridges.torproject.org/bridges</string>
    <string name="tari_lab_university_url" translatable="false">https://tlu.tarilabs.com/</string>
    <string name="digit_0">0</string>
    <string name="digit_1">1</string>
    <string name="digit_2">2</string>
    <string name="digit_3">3</string>
    <string name="digit_4">4</string>
    <string name="digit_5">5</string>
    <string name="digit_6">6</string>
    <string name="digit_7">7</string>
    <string name="digit_8">8</string>
    <string name="digit_9">9</string>
    <string name="digit_decimal_separator_bullet_char">.</string>
    <string name="digit_thousands_separator">,</string>
    <string name="digit_decimal_separator">.</string>
    <string name="emoji_hourglass">⏳</string>
    <string name="emoji_handshake">🤝</string>
    <string name="font_black" translatable="false">AVENIR_LT_STD_BLACK</string>
    <string name="font_heavy" translatable="false">AVENIR_LT_STD_HEAVY</string>
    <string name="font_medium" translatable="false">AVENIR_LT_STD_MEDIUM</string>
    <string name="font_regular" translatable="false">AVENIR_NEXT_LT_PRO_REGULAR</string>
    <string name="font_light" translatable="false">AVENIR_LT_STD_LIGHT</string>
    <string name="dummy_contact_alias">Sarah_D</string>
    <string name="dummy_contact_initial">S</string>
    <string name="dummy_message">Thanks again for helping with my move</string>
    <string name="long_dummy_message">Thanks again for helping with my move. Thanks again for helping with my move. Thanks again for helping with my move. Thanks again for helping with my move</string>
    <string name="dummy_emoji">🍀</string>
    <string name="dummy_emoji2">🍀🍀🍀</string>
    <string name="dummy_text">Test text</string>
    <string name="wallet_service_notification_channel_name">Tari Aurora Service Notification Channel</string>
    <string name="app_notification_channel_name">Tari Aurora Notification Channel</string>
    <string name="notification_tx_received_title">You\'ve got tXTR!</string>
    <string name="notification_tx_received_description_format">Someone just sent you %1$s tXTR.</string>
    <string name="notification_tx_canceled_title">Your transaction was cancelled</string>
    <string name="notification_tx_canceled_description">The sender cancelled the transaction before it was finalized, so the tXTR was returned to them</string>
    <string name="error_node_unreachable_title">It\'s not you, it\'s the network.</string>
    <string name="error_node_unreachable_description">Looks like there\'s a connectivity issue on our end. Can you give us a few min, then come back and try again?</string>
    <string name="error_no_connection_title">Can\'t connect to the internet</string>
    <string name="error_no_connection_description">Your phone appears to be offline or has a poor connection at the moment. Please try again when you\'ve found a stronger signal.</string>
    <string name="error_balance_exceeded_title">Hold your horses! 🐴</string>
    <string name="error_balance_exceeded_description">Sorry, you can’t send this much tXTR until your previous transaction(s) are complete. Please wait for at least one transaction to complete and then try again.</string>
    <string name="error_fee_more_than_amount_title">Amount Error</string>
    <string name="error_fee_more_than_amount_description">Sorry, the amount cannot be less than the fee.</string>
    <string name="error_wallet_message_generic">Something went wrong! Please try again later. Please send us a bug report if this problem persists.</string>
    <string name="error_wallet_message_114">The wallet could not be restored. The backup file is not supported. We updated the wallet version, old
        backup files without a password are not valid anymore. You can download an older version, make a backup with a password and try again.</string>
    <string name="error_wallet_message_204">Transaction not found. Please try again later. Please submit a bug report using the \"Report a Bug\" option from the settings menu if this problem appears again.</string>
    <string name="error_wallet_message_401">Contact not found. Please try again later. Please submit a bug report using the \"Report a Bug\" option from the settings menu if this problem appears again.</string>
    <string name="error_wallet_message_420">Wallet was not encrypted but a passphrase was supplied. Please try again later or try to restore your wallet.</string>
    <string name="error_wallet_message_428">Unable to decrypt the wallet. Please try again later or try to restore your wallet.</string>
    <string name="error_wallet_message_429">Unable to recover your wallet from provided seed words. Please check the list of entered seed words and try again.</string>
    <string name="error_wallet_message_430">The provided seed words are not compatible with the current wallet version. Please get in touch with support for more details.</string>
    <string name="error_wallet_message_702">Looks like your backup isn\'t compatible with this wallet version. Consider making a new one!</string>
    <string name="common_continue">Continue</string>
    <string name="common_from">From</string>
    <string name="common_to">To</string>
    <string name="common_close">Close</string>
    <string name="common_done">Done</string>
    <string name="common_new_uppercase">NEW</string>
    <string name="common_save">Save</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_retry">Retry</string>
    <string name="common_ok">OK</string>
    <string name="common_confirm">Confirm</string>
    <string name="common_apply">Apply</string>
    <string name="common_share">Share</string>
    <string name="common_error_title">Error</string>
    <string name="common_unknown_error">Unknown error</string>
    <string name="common_permission_required_dialog_body">We need access to %s to perform this action. Please, open the Settings app, find this permission in the list, and grant it</string>
    <string name="common_permission_required_button">To Settings</string>
    <string name="common_delete">Delete</string>
    <string name="common_lets_do_it">Yes! Let\'s do it!</string>
    <string name="common_lets_do_it_2">Yeah! Let\'s do it!</string>
    <string name="common_no_2">Nah, not now</string>
    <string name="common_are_you_sure">Are you sure?</string>
    <string name="common_next">Next</string>
    <string name="common_not_ready_yet_dialog_title">Hang tight, coming soon!</string>
    <string name="common_not_ready_yet_dialog_description">This feature is currently under construction. We\'re working hard to bring it to you soon. Stay tuned!</string>
    <string name="common_copied_to_clipboard">Copied to clipboard</string>
    <string name="emoji_id_copied">COPIED</string>
    <string name="emoji_id_bullet_separator">•••</string>
    <string name="emoji_id_chunk_separator">l</string>
    <string name="copy_emoji_id">Copy Emoji ID</string>
    <string name="paste_emoji_id">Paste copied Emoji ID</string>
    <string name="tap_to_see_full_emoji_id">Tap to see full Emoji ID</string>
    <string name="full_emoji_id_long_tap_hint">ℹ️ You can long-press the Copy Emoji ID button to copy the address in hexadecimal format.</string>
    <string name="internet_connection_error_dialog_title">Can\'t connect to the interwebs</string>
    <string name="internet_connection_error_dialog_description">Your phone is either offline or has a poor connection at the moment. We\'ll wait here until you find some stronger signal.</string>
    <string name="wallet_service_title">Tari Aurora wallet service is running</string>
    <string name="wallet_service_description">This service carries out wallet operations across applications</string>
    <string name="wallet_service_error_testnet_tari_request">Could not allocate free tXTR</string>
    <string name="wallet_service_error_no_internet_connection">No internet connection!</string>
    <string name="faucet_error_title">Failed to claim tXTR</string>
    <string name="faucet_error_common">No free tXTR is available right now! Hang tight, we\'ll get you some tXTR the moment it is available.</string>
    <string name="first_testnet_utxo_tx_message">💸 Here’s some tXTR!</string>
    <string name="second_testnet_utxo_tx_message">Nice work! Here\'s more tXTR to fill your coffers. Be sure to hit the Store icon to see real, exclusive items you can redeem with your "hard-earned" tXTR.</string>
    <string name="introduction_create_wallet">Create A Wallet</string>
    <string name="introduction_import_wallet">Import Wallet</string>
    <string name="introduction_import_wallet_info">Import wallet if you\'re already mining on desktop</string>
    <string name="create_wallet_cancel_dialog_title">Cancel Wallet Creation</string>
    <string name="create_wallet_cancel_dialog_description">Are you sure you want to cancel wallet creation? You will lose all progress.</string>
    <string name="tx_failed_title">Sorry, you can\'t send tXTR to offline users</string>
    <string name="tx_failed_description">Please make sure your recipient has a reliable internet connection and has the Aurora app open on their device, and then try again. If that doesn\'t work, please verify you have the correct Emoji ID.</string>
    <string name="tx_details_cancel_dialog_description">You will have to start a new transaction if you change your mind.</string>
    <string name="tx_details_cancel_dialog_cancel">Yes, cancel</string>
    <string name="tx_details_cancel_dialog_not_cancel">Not now</string>
    <string name="debug_custom_base_node">Custom Base Node</string>
    <string name="debug_edit_base_node_name_hint">Base Node Name</string>
    <string name="debug_edit_base_node_public_key_hint">Public Key HEX</string>
    <string name="debug_edit_base_node_address_hint">Address</string>
    <string name="debug_edit_base_node_invalid_public_key">Invalid public key hex.</string>
    <string name="debug_edit_base_node_invalid_address">Invalid address.</string>
    <string name="incompatible_network_title">Time to move on</string>
    <string name="incompatible_network_description">Good news: The Tari testnet has been reset, bringing a whole host of new features and upgrades.\n\nBad news: Your old tXTR is no longer good here, and the network will reset your balance to zero soon. But on the bright side, this is a great opportunity to start afresh with a spanking new wallet! What do you say?</string>
    <string name="incompatible_network_reset_later">I\'ll do it later</string>
    <string name="incompatible_network_reset_now">Start over, I say!</string>
    <string name="back_up_wallet_turn_off_backup_warning_title">Your backup will be deleted</string>
    <string name="back_up_wallet_turn_off_backup_warning_description">Are you sure you want to proceed?</string>
</resources>