<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/common_dialog_horizontal_margin"
    android:layout_marginBottom="@dimen/common_dialog_bottom_margin"
    android:background="@drawable/bottom_dialog_bg"
    android:orientation="vertical">

    <com.tari.android.wallet.ui.component.CustomFontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_horizontal_margin"
        android:singleLine="false"
        android:lineSpacingExtra="8dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/internet_connection_error_dialog_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:customFont="@string/font_light" />

    <com.tari.android.wallet.ui.component.CustomFontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="10dp"
        android:layout_marginHorizontal="@dimen/common_horizontal_margin"
        android:text="@string/internet_connection_error_dialog_description"
        android:textColor="#8080A3"
        android:textSize="14sp"
        app:customFont="@string/font_medium" />

    <com.tari.android.wallet.ui.component.CustomFontTextView
        android:id="@+id/internet_connection_error_dialog_txt_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginTop="14dp"
        android:text="@string/common_close"
        android:textColor="@color/dialog_cancel_action"
        android:textSize="13sp"
        app:customFont="@string/font_heavy" />

</LinearLayout>
