<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/home_dialog_testnet_tari_dialog_margin"
    android:layout_marginRight="@dimen/home_dialog_testnet_tari_dialog_margin"
    android:layout_marginBottom="23dp"
    android:background="@drawable/bottom_dialog_bg"
    android:orientation="vertical">

    <com.tari.android.wallet.ui.component.CustomFontTextView
        android:id="@+id/tx_failed_dialog_txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="30dp"
        android:lineSpacingExtra="8dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/tx_failed_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:customFont="@string/font_light" />

    <com.tari.android.wallet.ui.component.CustomFontTextView
        android:id="@+id/tx_failed_dialog_txt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="10dp"
        android:text="@string/tx_failed_description"
        android:textColor="@color/dark_gray"
        android:textSize="14sp"
        app:customFont="@string/font_medium" />

    <com.tari.android.wallet.ui.component.CustomFontTextView
        android:id="@+id/tx_failed_dialog_txt_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/common_close"
        android:textColor="@color/dialog_cancel_action"
        android:textSize="13sp"
        app:customFont="@string/font_heavy" />

</LinearLayout>
