<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/home_dialog_testnet_tari_dialog_margin"
    android:layout_marginRight="@dimen/home_dialog_testnet_tari_dialog_margin"
    android:layout_marginBottom="23dp"
    android:background="@drawable/bottom_dialog_bg"
    android:orientation="vertical">

    <com.tari.android.wallet.ui.component.CustomFontTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="30dp"
        android:lineSpacingExtra="8dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/back_up_wallet_turn_off_backup_warning_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:customFont="@string/font_light" />

    <com.tari.android.wallet.ui.component.CustomFontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="10dp"
        android:text="@string/back_up_wallet_turn_off_backup_warning_description"
        android:textColor="@color/dark_gray"
        android:textSize="14sp"
        app:customFont="@string/font_medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <com.tari.android.wallet.ui.component.CustomFontButton
            android:id="@+id/backup_turn_off_cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:paddingHorizontal="4dp"
            android:text="@string/common_cancel"
            android:textAllCaps="false"
            android:textColor="@color/dialog_cancel_action"
            android:textSize="16sp"
            app:customFont="@string/font_heavy" />

        <com.tari.android.wallet.ui.component.CustomFontButton
            android:id="@+id/backup_turn_off_confirm_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@drawable/gradient_button_bg"
            android:paddingHorizontal="4dp"
            android:text="@string/common_confirm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:customFont="@string/font_heavy" />

    </LinearLayout>

</LinearLayout>
