<?xml version="1.0" encoding="utf-8"?>

<com.tari.android.wallet.ui.component.tari.TariPrimaryBackground xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.tari.android.wallet.ui.component.tari.TariToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/debug_custom_base_node" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="25dp">

                <com.tari.android.wallet.ui.component.tari.TariInput
                    android:id="@+id/name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:imeOptions="actionNext"
                    app:hintText="@string/debug_edit_base_node_name_hint" />

                <com.tari.android.wallet.ui.component.tari.TariInput
                    android:id="@+id/public_key_hex_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:imeOptions="actionNext"
                    app:errorText="@string/debug_edit_base_node_invalid_public_key"
                    app:hintText="@string/debug_edit_base_node_public_key_hint" />

                <com.tari.android.wallet.ui.component.tari.TariInput
                    android:id="@+id/address_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:imeOptions="actionDone"
                    app:errorText="@string/debug_edit_base_node_invalid_address"
                    app:hintText="@string/debug_edit_base_node_address_hint" />

                <com.tari.android.wallet.ui.component.tari.TariButton
                    android:id="@+id/save_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/common_action_button_height"
                    android:layout_gravity="end"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/vector_disable_able_gradient_button_bg"
                    android:text="@string/common_save"
                    android:textAllCaps="false"
                    android:textColor="@color/button_text_color_selector"
                    android:textSize="16sp"
                    app:customFont="heavy" />

            </LinearLayout>

        </ScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>

</com.tari.android.wallet.ui.component.tari.TariPrimaryBackground>