<?xml version="1.0" encoding="utf-8"?><!-- hundreds -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_balance_vw_digit_container"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/home_balance_digit_height"
    android:clipChildren="true"
    android:orientation="vertical">

    <com.tari.android.wallet.ui.component.CustomFontTextView
        android:id="@+id/balance_top_digit_text_view"
        android:layout_width="5dp"
        android:layout_height="@dimen/home_balance_digit_height"
        android:padding="0dp"
        android:text="@string/digit_5"
        android:textColor="@color/white"
        android:textSize="@dimen/home_balance_digit_text_size"
        app:customFont="@string/font_black" />

    <com.tari.android.wallet.ui.component.CustomFontTextView
        android:id="@+id/balance_bottom_digit_text_view"
        android:layout_width="5dp"
        android:layout_height="@dimen/home_balance_digit_height"
        android:padding="0dp"
        android:text="@string/digit_6"
        android:textColor="@color/white"
        android:textSize="@dimen/home_balance_digit_text_size"
        app:customFont="@string/font_black" />
</LinearLayout>
